Fix build order computation if project and bundle name are not equals
This fixes the build order computation in case an Eclipse project in a
workspace is not named like its corresponding bundle,
i.e. if a project's name differers from the Bundle-SymbolicName
specified in its MANIFEST.MF.